<resources>
    <string name="app_name">Liebes Tagebuch</string>
    <string name="login_fingerprint_text">Press the Lock to Log in with your Fingerprint</string>
    <string name="login_password_text">No Fingerprint Sensor found, press the Lock to Log in with Password</string>
    <string name="login_fingerprint_hw_unavailable">The Biometric Sensors are currently unavailable, press the Lock to log in with Password</string>
    <string name="login_fingerprint_no_fingerprint">There are no Fingerprints registered on this Phone, press the Lock to log in with Password</string>


    <string name="encryption_failed">The Encryption Process failed, if this keeps happening please change your password or deactivate Encryption.</string>
    <string name="decryption_failed">The Decryption Process failed, if this keeps happening please change your password or deactivate Encryption.</string>

    <string name="settings_title">Preferences</string>
    <string name="settings_encrypt">Encrypt Entries</string>
    <string name="settings_reminder">Reminder</string>
    <string name="settings_password">Set Password</string>
    <string name="settings_button">Settings</string>
    <string name="back_button_title">Back to Grid</string>
    <string name="add_menu_button_title">Add Box to List</string>
    <string name="type_chooser_text">Add Text</string>
    <string name="type_chooser_picture">Add Picture</string>
    <string name="hint_new_textbox">Was willst du erzählen?</string>
    <string name="take_picture_button_text">Take Picture</string>
    <string name="choose_picture_button_text">Choose Picture</string>
    <string name="wrong_password">Wrong Password!</string>
    <string name="set_password_first">Please set the password before using fingerprints</string>
    <string name="type_chooser_map">Add Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="edit_map">Edit Map/Location</string>
    <string name="type_chooser_music">Add Song</string>
    <string name="spotify_explanation">Please note:</string>
    <string name="note_about_spotify">For this Feature to work properly you need to have the Spotify App installed and be logged in with a premium account. Moreover, the Spotify App should NOT be in offline mode, because this could cause crashes.</string>
    <string name="spotify_link_hint">Paste a link to a song</string>
    <string name="ok">Ok</string>
    <string name="spotify_title_name_default">Title of current track</string>
    <string name="spotify_artist_default">Artist of current track</string>
    <string name="music_box_title_default">Loading Song title...</string>
    <string name="music_box_artist_default">If you have connection and this does not change you can still play the song and reopen the DBEntry to get information.</string>
    <string name="search_hint">Search for track</string>
    <string name="hint_new_header">Überschrift einfügen</string>
    <string name="type_chooser_header">Add Header</string>
    <string name="notification_title">Dear Diary...</string>
    <string name="notification_text">Don\'t forget to write a diary DBEntry today!</string>
    <string name="old_password_hint">Enter current password</string>
    <string name="new_password_hint">Enter new Password</string>
    <string name="new_password_repeat_hint">Repeat new password</string>
    <string name="please_note_change_pw">Please Note</string>
    <string name="note_about_changing_pw">Changing the password will have to reencrypt all Entries, depending on how many Entries you have made, this could take a while.</string>
    <string name="change_pw_running">Reencryption running, please wait</string>
    <string name="disable_encryption_button">Disable</string>
    <string name="disable_decryption_running">Decryption running, please wait</string>
    <string name="note_disable">Disabling Encryption will have to Decrypt all existing Entries.</string>
    <string name="enable_encryption_botton">Enable</string>
    <string name="note_enable_encryption">Enabling encryption will have to reencrypt all entries. Depending on the number and size of you entries this might take a while.</string>
    <string name="encryption_running">Encryption running, please wait</string>

    <!-- Konstanten, die in den/für die Detail- und EditActivities gebraucht werden -->
    <string name="entry_date_key">Entry Date</string>
    <string name="emotion_key">EmotionKey</string>
    <string name="box_list_key">BoxListString</string>
    <string name="position_in_list_key">Position in list</string>
    <string name="existing_content_key">Existing content</string>
    <string name="textbox_content_key">Textbox content</string>
    <string name="picturebox_content_key">Picturebox content</string>
    <string name="mapbox_content_key">Mapbox content</string>
    <string name="musicbox_content_key">Musicbox content</string>
    <string name="headerbox_content_key">Headerbox content</string>
    <string name="spotify_client_id">ce7c78a74aa7477989eae35bc8725657</string>
    <string name="spotify_redirect_uri">ur.mi.liebestagebuch://callback</string>

    <!-- Konstanten, die für die Verschlüsselung gebraucht werden -->
    <string name="encryption_algorithm">AES/CBC/PKCS5Padding</string>
    <string name="key_factory_algorithm">PBKDF2WithHmacSHA256</string>
    <string name="charset_name">UTF-8</string>

    <!-- Konstanten, die für die Einstellungen gebraucht werden -->
    <string name="shared_prefs_name">sharedPrefs</string>
    <string name="encrypt_setting">sw_encrypt</string>
    <string name="remind_setting">sw_remind</string>
    <string name="remind_hour">time_hour</string>
    <string name="remind_minute">time_minute</string>
    <string name="has_decrypted_key">Has decrypted</string>
    <string name="has_encrypted_key">Has encrypted</string>

</resources>
