<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/chnage_pw_note_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_note_change_pw"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/change_pw_note"
        android:layout_below="@id/chnage_pw_note_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="15sp"
        android:layout_marginBottom="5dp"
        android:text="@string/note_about_changing_pw"/>

    <EditText
        android:id="@+id/change_password_old_password"
        android:layout_below="@id/change_pw_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/old_password_hint"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/change_password_new_password"
        android:hint="@string/new_password_hint"
        android:layout_below="@id/change_password_old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/change_password_repeat"
        android:hint="@string/new_password_repeat_hint"
        android:layout_below="@id/change_password_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_margin="10dp"/>

    <TextView
        android:id="@+id/encryption_running_tv"
        android:layout_below="@id/change_password_repeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        android:textAlignment="center"
        android:text="@string/change_pw_running" />

    <ImageButton
        android:id="@+id/change_password_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_check_black_24dp"
        android:background="@color/button_color"
        android:layout_alignParentBottom="true"
        android:layout_margin="15dp"/>

</RelativeLayout>