<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent" android:background="@color/backgroundColor">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/disable_decryption_button"
        android:layout_marginBottom="25dp"
        android:text="@string/note_disable"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/disable_decryption_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/button_round_corners"
        android:text="@string/disable_encryption_button"/>

    <TextView
        android:id="@+id/disable_running_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/disable_decryption_button"
        android:layout_marginTop="25dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/disable_decryption_running"
        android:textColor="@color/colorPrimary"/>

    <ProgressBar
        android:id="@+id/disable_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/disable_running_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:indeterminate="true"
        android:visibility="visible" />

</RelativeLayout>