<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background=""
                android:src="@drawable/ic_baseline_arrow_back_24"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:gravity="center"
                android:text="@string/settings_title"
                android:textSize="20sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:text="@string/settings_encrypt"
                android:textSize="20sp"/>

            <Switch
                android:id="@+id/switch_encrypt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="30"
                android:scaleX="1.25"
                android:scaleY="1.25"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:text="@string/settings_reminder"
                android:textSize="20sp"/>

            <Switch
                android:id="@+id/switch_remind"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="30"
                android:scaleX="1.25"
                android:scaleY="1.25"/>

        </LinearLayout>

        <TimePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:timePickerMode="spinner"
            android:visibility="gone"
            />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:text="@string/settings_reminder"
            android:textSize="20sp"/>

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background=""
            android:src="@drawable/ic_baseline_arrow_forward_ios_24"/>

    </LinearLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="205dp" />

</androidx.constraintlayout.widget.ConstraintLayout>